# cabrunco

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
backend/: startup.py
backend/src/: app.py
backend/src/core/: database.py
backend/src/handler/produto/: handler_produto.py
backend/src/models/produtos/: produto_model.py
backend/src/repository/produto/: produto_repositorio.py
backend/src/routers/superbom/: superbom_router.py
backend/src/schemas/produtos/: produto_schema.py
