[tool.poetry]
name = "lamparao"
version = "0.1.0"
description = ""
authors = ["cabrumcos"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pre-commit = "^3.5.0"
selenium = "^4.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
